# gamma

./: .gitignore  Cargo.toml  README.md  build_pong.bat  build_pong_windows.bat  build_tetris.bat  external_fn.gamma  gen_tests.bat  generate_sample_tests.py  init_vcvars.bat  pong.gamma  start_windows.c  test001.gamma
.cargo/: config.toml
docs/: Env structure.md  Index.md  Language specification.md  Nice to haves.md  Roadmap.md  Semantic checks.md  Terminator instructions.md
docs/.obsidian/: graph.json  workspace.json
docs/Documentation/: Language specification.md  Semantic checks.md
docs/Notes/: Rust local documentation.md  Terminator instructions.md
docs/Random thoughts/: Public domain images.md  Vim improvements.md
src/: ast.rs  ast_helpers.rs  ast_interpreter.rs  ast_transform.rs  ast_visitor.rs  ast_visitor.rs.bak  bytecode.rs  codegen.rs  compiler.rs  env.rs  error.rs  ink_codegen.rs  interpreter.rs  layout.rs  lib.rs  main.rs  parse.rs  parser.rs  pool_allocator.rs  scope_stack.rs  semantics.rs  sexpr.rs  source_location.rs  string_interner.rs  tetris.gamma  tokenizer.rs  tokens.rs  type_annotate.rs  type_annotation.rs  type_check.rs  type_check.rs.bak  type_check2.rs  type_coercion.rs  type_interner.rs  type_node_annotation.rs  types.rs  util.rs  utils.rs  visitor.rs  visitor_mut.rs  (+2 more)
src/semantics/: break_and_continue_in_loop.rs  has_main.rs  mod.rs  validate_symbol_use.rs
src/snapshots/: gamma__tokenizer__tests__tokens_snapshot.snap
tests/: generate_sample_tests.py  test_sample_programs.rs  test_valid_samples.rs  tokenizer.rs  type_check.rs  valid_samples.rs
tests/samples/: basic_main.gamma  factorial.gamma
tests/snapshots/: test_valid_samples__arithmetic.snap  test_valid_samples__array.snap  test_valid_samples__basic_arithmetic_optimized.snap  (+31 more)
tetris/: main.gamma  tetris.gamma
(+17 files in other folders)
