[package]
name = "gamma"
version = "0.1.0"
authors = ["toteload"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
strum_macros = "0.24.3"
serde = { version = "1.0.169", features = ["derive"] }
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
llvm-sys = "150"
anyhow = "1.0.72"

[dev-dependencies]
insta = { version = "1.30.0", features = ["yaml", "ron"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.dev.package.inkwell]
opt-level = 3
